Improved the performance of the geometery on the map page and added a daily goals system.

--- a/Ocean2Ocean.Mvc/Ocean2Ocean.csproj
+++ b/Ocean2Ocean.Mvc/Ocean2Ocean.csproj
@@ -18,4 +18,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Ocean2Ocean.DataAccess\Ocean2Ocean.DataAccess.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="wwwroot\js\route.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\js\site.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
