--- a/Ocean2Ocean.Mvc/Ocean2Ocean.csproj
+++ b/Ocean2Ocean.Mvc/Ocean2Ocean.csproj
@@ -21,14 +21,14 @@
     <ProjectReference Include="..\Ocean2Ocean.DataAccess\Ocean2Ocean.DataAccess.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="wwwroot\images\DSC06102small.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\js\route.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\js\site.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 </Project>
