Added the Highway 101 route.

--- a/Ocean2Ocean.Mvc/Ocean2Ocean.csproj
+++ b/Ocean2Ocean.Mvc/Ocean2Ocean.csproj
@@ -24,6 +24,9 @@
     <Content Update="wwwroot\images\DSC06102small.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\js\altRoute.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\js\route.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
